# FufuPot-SP24

./: .gitignore  .gitmodules
production/ecad/FufuS24/: #auto_saved_files#  Control.kicad_sch  FufuS24.kicad_pcb  FufuS24.kicad_pro  FufuS24.kicad_sch  Induction_Heating.kicad_sch  Motor.kicad_sch  Power.kicad_sch  User_Interface.kicad_sch  Water_Dispensing.kicad_sch  fp-lib-table
production/ecad/components/footprints.pretty/: CAPC2012X94N.kicad_mod  CAPRR2500W80L2800T1330H1990.kicad_mod  CAP_ECQUA_41.0LX15.0TX30.0H_PAN.kicad_mod  CON_5025840270_MOL.kicad_mod  DDA0008E-IPC_B.kicad_mod  DMG2302UK-7_Footprint.kicad_mod  DPAK114P990X239-6N.kicad_mod  FOD3150_footprint.kicad_mod  INDPM120120X800N.kicad_mod  INDPM176169X700N.kicad_mod  IRFB4610PBF.kicad_mod  LED_GS75000_WRE.kicad_mod  LevelShifter_Motorkicad_mod  MOLEX4_CON_5033950410.kicad_mod  PWR_4POS.kicad_mod  RESC2012X60N.kicad_mod  RESETBUTTON.kicad_mod  RES_SQP500_22X9P5_YAG.kicad_mod  RP2040_Footprint.kicad_mod  W25Q128JVSIM_footprint.kicad_mod  WCAP-CSGP_885012206026.kicad_mod  XTAL_ABLS-12.000MHZ-B4-T.kicad_mod
production/ecad/components/symbols/: HDMI-through-hole-conn.bak  HDMI-through-hole-conn.kicad_sym
production/src/: README.md  fufu_cook.c  fufu_ui.c  fufu_ui.h  motor.c  pin_definitions.h
production/src/assets/: L_logo.c  img_lv_demo_music_btn_pause.c  img_lv_demo_music_btn_play.c
production/src/ui/: fufu_cook.cpp  fufu_cook.h  fufu_lvgl.ino  heat_func.cpp  heat_func.h  main.ino  motor.cpp  motor.h  pin_definitions.cpp  pin_definitions.h  ui.ino  water_pump.cpp  water_pump.h
production/src/ui/PicoDVI/software/apps/fufu-ui/: CMakeLists.txt  fufu_cook.h  heat_ctrl.c  heat_ctrl.h  heat_func.h  heat_sensing.h  main.c  main.cpp
production/src/ui/assets/: BW_logo.c  done_logo.c  (+1 more)
(+1 files in other folders)
